--- a/main.html
+++ b/main.html
@@ -6,20 +6,22 @@
     <title>Streetfighter</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="js/app.js"></script>
 </head>
 
 <body>
     <div class="main">
         <div class="ryu">
-            <div class="ryu-still"></div>
-            <div class="ryu-ready"></div>
-            <div class="ryu-throw"></div>
-            <div class="ryu-cool"></div>
-
+            <div class="ryu-action ryu-still"></div>
+            <div class="ryu-action ryu-ready"></div>
+            <div class="ryu-action ryu-throw"></div>
+            <div class="ryu-action ryu-cool"></div>
         </div>
+
+        <div class="hadouken"></div>
     </div>
-    <script src="http://code.jquery.com/jquery.min.js"></script>
-    <script src="js/app.js"></script>
+
 </body>
 
 </html>
