added speech bubble, working on music

--- a/main.html
+++ b/main.html
@@ -12,6 +12,10 @@
 
 <body>
     <div class="main">
+        <div class="how-to">
+            <h1>Click Ryu to throw Hadouken!</h1>
+            <h1>Press and hold x to see Ryu's <em>cool</em> pose.</h1>
+        </div>
         <div class="ryu">
             <div class="ryu-action ryu-still"></div>
             <div class="ryu-action ryu-ready"></div>
@@ -20,9 +24,10 @@
         </div>
 
         <div class="hadouken"></div>
+        <div class="hadouken-bubble"></div>
     </div>
     <audio id='hadouken-sound' src='sound/hadouken.mp3'></audio>
-
+    <audio src="sound/cool.mp3" id="cool-sound"></audio>
 </body>
 
 </html>
