--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Streetfighter</title>
+    <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="http://code.jquery.com/jquery.min.js"></script>
@@ -14,7 +15,7 @@
     <div class="main">
         <div class="how-to">
             <h1>Click Ryu to throw Hadouken!</h1>
-            <h1>Press and hold x to see Ryu's <em>cool</em> pose.</h1>
+            <h1>Press and hold x to see Ryu's cool pose.</h1>
         </div>
         <div class="ryu">
             <div class="ryu-action ryu-still"></div>
@@ -25,6 +26,7 @@
 
         <div class="hadouken"></div>
         <div class="hadouken-bubble"></div>
+
     </div>
     <audio id='hadouken-sound' src='sound/hadouken.mp3'></audio>
     <audio src="sound/cool.mp3" id="cool-sound"></audio>
