--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 
     </div>
     <audio id='hadouken-sound' src='sound/hadouken.mp3'></audio>
-    <audio src="sound/cool.mp3" id="cool-sound"></audio>
+    <audio src="sound/cool.mp3" id="cool"></audio>
 </body>
 
 </html>
