text alignment changes

--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 <body>
     <div class="main">
         <div class="how-to">
-            <h1>Click Ryu to throw Hadouken!</h1>
-            <h1>Press and hold x to see Ryu's cool pose.</h1>
+            <p>Click Ryu to throw Hadouken!</p>
+            <p>Press and hold x to see Ryu's cool pose.</p>
         </div>
         <div class="ryu">
             <div class="ryu-action ryu-still"></div>
